# Stoat-CLIent

./: .gitignore  README.md  pyproject.toml
src/: console_utils.py  main.py  message_formatting.py  message_info.py
